# SparkForFun

./: README.md
apache-atlas/: build.sbt
apache-atlas/src/test/resources/: atlas-application.properties
databases-timezones/: build.sbt
databases-timezones/project/: plugins.sbt
datadog/: README  build.sbt  settings.gradle.old
metastore-listeners/: README  build.sbt  sslconfig.xml
metastore-listeners/src/test/resources/: log4j.properties
playground/: README  build.sbt
playground/playground-spark-atlas/docker/: Dockerfile  README
playground/playground-spark-atlas/docker/builder/: Dockerfile
playground/playground-spark-hive/docker/: .env  README  docker-compose.yml
playground/playground-spark-ranger/docker/: Dockerfile  README
playground/project/: plugins.sbt
pyspark/: .gitignore  .pylintrc  Pipfile  README.md  pyproject.toml  setup.py  tox.ini
pyspark/app/: __init__.py  awesome_job.py
pyspark/example/: awesome_job.py  awesome_service.py
pyspark/src/app/: awesome_app.py  awesome_job.py  awesome_service.py
pyspark/src/awesome/app/: awesome_app.py
pyspark/src/awesome/job/: awesome_job.py
pyspark/tests/: awesome_service_test.py  commons.py  conftest.py  shared_spark_session_helper.py
pyspark/tests/endtoend/: test_awesome_app.py
pyspark/tests/integration/: test_awesome_job.py
pyspark/tests/sparktestingbase/: sqltestcase.py  testcase.py
pyspark/tests/unit/: __init__.py  test_awesome_service.py
shared-spark-session-helper/: README.md
spark-authorizer/: build.sbt
spark-authorizer/project/: plugins.sbt
(+48 files in other folders)
