[tool.poetry]
name = "pyspark-unit-testing"
version = "0.1.0"
description = "PySpark, Unit, Integration and End-To-End testing"

license = "Apache License 2.0"

authors = [
    "Gustavo Martin Morcuende"
]


[tool.poetry.dependencies]
pyspark = "==2.4.5"
python = "==3.7"

# DEV dependencies
pytest = { version = "==5.4.3", optional = true }
pytest-cov = { version = "==2.10.1", optional = true }
pycodestyle = { version = "==2.6.0", optional = true }
pylint = { version = "==2.5.2", optional = true }


[tool.poetry.extras]
test = ["pytest", "pytest-cov", "pycodestyle", "pylint"]


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
